--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
     username: admin
     password: 123456!
     driver-class-name: org.postgresql.Driver
+mybatis:
+  mapper-locations: classpath:mapper.*
